--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -10,6 +10,9 @@
   width: 100%;
   max-width: 400px;
   padding: 40px 32px;
+  background-color: #fff;
+  border-radius: 12px;
+  color: black;
 }
 
 .login-header {
